User johns
Data:

    Fix bug: broken device plugin stop and exit.
    Show transparent cursor to hide cursor.
    VDPAU: Add color standard support.
    VDPAU: Add denoise and sharpness support.
    VDPAU: Add skip chroma deinterlace support.
    VDPAU: Show OSD only if something is to display, improves performance.
    VDPAU: Add deinterlace with only 4 surfaces.

Date: Thu Jan 4 17:00:00 CET 2012

    Release Version 0.1.5
    Adds OSS mixer support.
    Fix bug: audio new stream is not thread safe.
    New audio driver OSS.
    Fix bug: needed down sampling of 3/5/6 to 2 channels not reported.
    Search audio sync inside PES packets, for insane dvb streams.
    Use only the needed number of surfaces.

Date: Thu Dec 29 19:44:43 CET 2011

    Release Version 0.1.4
    Prepared vdpau noise reduction support.
    Vdpau also displays a black surface, when no video is available.
    Fix bug: CodecVideoDecode destroys avpkt.

Date: Thu Dec 29 00:55:57 CET 2011

    Release Version 0.1.3
    Add missing VdpauDecoderDestroy.
    Cleanup video packet ringbuffer.
    Allow build without VDPAU.
    Fix bug: swapped end and start.
    Support other than "PCM" alsa mixer channels.

Date: Sat Dec 24 15:26:27 CET 2011

    Release Version 0.1.2
    Fix wrong decoder->SurfaceField again.
    Remove interlaced_frame debug, it can't be used.
    Fix new video stream never resets, if buffers full.

Date: Fri Dec 23 21:31:27 CET 2011

    Release Version 0.1.1
    Initial VDPAU decoder support.
    Initial VDPAU output support.
    Configurable audio delay.
    Make pts monotonic.
    Support old libav and ffmpeg libs.
    Support xcb_icccm_set_wm_protocols with xcb-util <0.3.8.
    New video/audio sync code.
    Support xcb-util <0.3.8.
    Use current configuration for setup menu.
    Initial support of replay.
    Workaround for libva-driver-intel 1080i problems.
    DisplayFrame displays now only a single frame.
    Add deinterlace/scaling modes to setup.
